environments/dev/kubernetes/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  name: ingress-argocd-server
  namespace: argocd
spec:
  # tls:
  # - hosts:
  #   - homelab.com
  #   secretName: example-app-tls
  rules:
  - host: argocd.homelab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: argocd-server
            port: 
              number: 80
